[tool.poetry]
name = "manifold"
version = "0.1.0"
description = "Light and Robust Web3 Multicall"
authors = ["Tony Rocco Valentine <tonyroccovalentine@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
eth-retry = "^0.1.17"
pysad = {git = "git@github.com:Dedaub/pySAD.git"}
requests = "^2.30.0"
parse = "^1.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-memray = "^1.4.0"
pyinstrument = "^4.4.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
