[project]
name = "manifold"
version = "0.3.22"
description = "Light and Robust Web3 Multicall"
authors = [{ name = "Tony Rocco Valentine", email = "tonyroccovalentine@protonmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.8.4,<4",
    "pysad",
    "msgspec>=0.15.1,<0.16",
]

[dependency-groups]
dev = [
    "pytest>=7.3.1,<8",
    "pytest-memray>=1.4.0,<2",
    "pyinstrument>=4.4.0,<5",
    "mypy>=1.3.0,<2",
]

[tool.uv]

[tool.uv.sources]
pysad = { git = "https://github.com/Dedaub/pySAD", tag = "v0.1.5" }

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
